2010-05-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.cpp: Fix typo in comment.

2010-05-25  Alan McGovern  <amcgovern@novell.com>

	* xaml.cpp: Make sure we don't return a random value at the
	  end of the function and make the 'else' a g_warning instead.

2010-05-24  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (is_start_of_word): A word doesn't need to start
	with an alphanumeric. Fixes drt 225.

2010-05-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* deployment.cpp: Don't include any curl headers if curl isn't enabled.

2010-05-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* src.mdp: Updated.

2010-05-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network.cpp|h: Create a new HttpRequest API that substitutes the old
	Downloader API.

	* network-curl.cpp|h: The curl bridge, moved from plugin, and modified to
	work with the new HttpRequest API.

	* pal/pal.cpp|h: 
	* pal/gtk/install-dialog.cpp: Update to use the new HttpRequest API + don't
	keep the xaps in memory while downloading them, just copy the file we store
	in /tmp. This fixes a potential security issue where we'd believe the size
	the http request told us, and we'd write to a memory area exactly that big.

	* runtime.cpp|h: Move the per-surface list of downloaders to Deployment.

	* Makefile.am: Updated.

	* glyphs.cpp:
	* downloader.cpp|h: 
	* mms-downloader.cpp|h:
	* file-downloader.cpp|h: Get rid of the internal downloaders, move the code in
	the file downloader into Downloader and delete the mms downloader. Move all
	the code related to having an external provider to a new HttpRequest class,
	only keep in Downloader what is required from the js API + the policy
	verification code. The MmsDownloader code was just wrapper code which is no
	longer needed, so it has been deleted.

	* deployment.cpp|h: Add API to set a current http handler, and create a curl
	handler by default if there is no current http handler or the current http
	handler can't handle a request.
